--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,12 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+/*  */
+
+.divebgimg{
+  background-image: url(../public/diveimg.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  
+}
