--- a/app/globals.css
+++ b/app/globals.css
@@ -1,31 +1,5 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
-}
-/*  */
-
 .divebgimg{
   background-image: url(../public/diveimg.png);
   background-repeat: no-repeat;
@@ -33,3 +7,25 @@ body {
   background-position: center;
   
 }
+
+body{
+  background-color: black;
+  color: white;
+}
+
+.cyber-wrapper {
+    position: relative;
+    padding: 40px;
+}
+
+/* corner shapes */
+.cyber-wrapper::before,
+.cyber-wrapper::after {
+    content: "";
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    border: 5px solid orange;   /* Color change as needed */
+}
+
+
